chore: remove obsolete feature flags pt3 (#18643)
Signed-off-by: Petar Tonev <petar.tonev@limechain.tech>